--- a/info.yaml
+++ b/info.yaml
@@ -1,23 +1,40 @@
 # Tiny Tapeout project information
-project:
-  title:        ""      # Project title
-  author:       ""      # Your name
-  discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+Project:
+  title:        "Pipeline-test"      # Project title
+  author:       "Prem"      # Your name
+  discord:      "prem_42503"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "Zero to ASIC demo project"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     10M       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
 
   # Your top module name must start with "tt_um_". Make it unique by including your github username:
-  top_module:  "tt_um_example"
+  top_module:  "tt_um_prem_pipeline_test"
 
   # List your project's source files here.
   # Source files must be in ./src and you must list each source file separately, one per line.
   # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
   source_files:
     - "project.v"
+    - "tt_um_prem_pipeline_test.v"
+    - " ALU.v clk.v Control_Unit.v"
+    - "DataMem.v EX_Mux.v"
+    - "EX_stage.v" 
+    - "Hazard_Unit.v"
+    - "IF_ID_stage.v" 
+    - "imm.v Instruction_Mem.v"
+    - "Mem_stage.v"
+    - "PC_incre.v"
+    - "PCSelect.v"
+    - "pipeline.v" 
+    - "Reg_File.v" 
+    - "Write_back.v"
+    - "WriteBack_stage.v"
+
+ifneq ($(GATES),yes)
+  # RTL simulation:
 
 # The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
@@ -33,8 +50,8 @@ pinout:
   ui[7]: ""
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
+  uo[0]: "PC_OUT"
+  uo[1]: "DATA_MEM_OUT_TOP"
   uo[2]: ""
   uo[3]: ""
   uo[4]: ""
